# MutaLambda

./: .gitignore  .repomixignore  CLAUDE.md  CONTRIBUTING.md  EMPIRICAL_EVIDENCE.md  MULTILANGUAGE_REPORT.md  MutaLambda_Experimental_Results.md  MutaLambda_Optimized_Modules.md  MutaLambda_Paper_Section.md  README.md  README_ES.md  TOD0.md  TODO.md  api_fingerprint.py  app.py  archive.py  benchmark_migration.py  benchmark_migration_before_after.py  benchmark_reproducible.py  benchmark_simple.py  benchmarking.py  checkpoint_manager.py  cli.py  code_hash.py  comparison.py  config.yaml  config_loader.py  constants.py  dashboard.py  differential.py  e2e_tests.py  evaluation_service.py  event_bus.py  evolution_engine.py  extensions.py  fitness_normalize.py  fitness_vector.py  hfc_tiers.py  interpretability.py  island.py  (+28 more)
PLANS/: AUTO_IMPROVEMENT_PLAN.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_WORKFLOW.md  REMEDIATION_PROGRESS.md  WORKFLOW_CHECKLIST.md  WORKFLOW_CLOSEOUT.md
cli/: __init__.py  animator.py  checkpoint_manager.py  config_manager.py  main.py
docs/: CLI.md  FITNESS_METRICS.md  METRICS.md  SCIENTIFIC_OPTIMIZATION_MODE.md
examples/: target.py  target_benchmark.json  target_tests.json
legacy/: README.md  document_intelligence.py  inferless_wrapper.py
muta_ext/: __init__.py  advanced_selection.py  dialectic_engine.py  pattern_memory.py  spatial_topology.py  thc_engine.py
scripts/: generate_status_report.py
tests/: conftest.py  e2e_tests.py  helpers.py  test_config.py  test_convergent_boost.py  test_cpp_adapter.py  test_evolution_upgrade_v2.py  test_fitness_directed_migration.py  test_fitness_vector.py  test_hfc_tiers.py  test_integration_regressions.py  test_lineage.py  test_lineage_compression.py  test_llm_backend.py  test_nsga2.py  test_part_b.py  (+11 more)
(+82 files in other folders)
